# DipG-Seg

./: CMakeLists.txt  package.xml
src/: demo.cpp  offline_kitti_node.cpp
src/include/: dipgseg.h
