<?xml version="1.0"?>
<package format="2">
  <name>point_segmentation</name>
  <version>0.0.1</version>
  <description>point_segmentation</description>
  
  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>eigen_conversions</depend>
  <depend>rclcpp</depend>  
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_opencv</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>pcl</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
